# Autograd-cpp

./: CMakeLists.txt  README.md
Example/: train_linear.cpp
Include/: autograd.h  function.h  ops.h  tensor.h
Src/: autograd.cpp  ops.cpp  tensor.cpp
